fix agenda spacing and add 4/17 schedule

--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,8 @@ button:focus,
     }
 
 .section-ajenda .session time {
-    padding       : 5px 25px 15px;
+    /*padding       : 5px 25px 15px;*/
+    padding: 5px 23px 0px;
     border-bottom : 1px solid #eeeeee;
     display       : inline-block;
     }
@@ -907,4 +908,9 @@ button:focus,
 .date-full {
     text-align: center;
     font-size: 15px;
+}
+
+.no-space-header {
+    margin-top: 0px !important;
+    font-size: 23px;
 }
